--- a/kanban.css
+++ b/kanban.css
@@ -1,6 +1,6 @@
 body {
 	background: #eef2f4;
-	width: 1080px;
+	width: 1140px;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 14px;
 	line-height: 20px;
@@ -64,6 +64,9 @@ body {
 
 .kanban-item-name {
 	font-weight: bold;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .kanban-item-price {
