Приступила к редактированию названия колонки

--- a/kanban.css
+++ b/kanban.css
@@ -34,6 +34,7 @@ body {
 	font-weight: bold;
 	padding: 10px 15px;
 	background: #acf2fa;
+	cursor: pointer;
 }
 
 .kanban-column-title:hover {
@@ -84,21 +85,27 @@ body {
 	color: #8e8e8e;
 }
 
+.kanban-column-form {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
 .kanban-column-input {
-	padding: 10px 15px;
-	border: 2px solid #acf2fa;
-	font-size: 18px;
-	line-height: 24px;
-	color: #000;
-	background: #fff;
-	outline: 0;
+    padding: 10px 10px;
+    border: 2px solid #acf2fa;
+    color: #000;
+    background: #fff;
+    outline: 0;
+    box-sizing: border-box;
 }
 
 .kanban-column-button {
-	width: 100%;
-	padding: 10px 33px;
-	cursor: pointer;
-	background: #acf2fa;
-	border: 0;
-	outline: 0;
+	font-weight: bold;
+	padding: 10px 9px;
+    cursor: pointer;
+    background: #acf2fa;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
 }
