--- a/kanban.css
+++ b/kanban.css
@@ -27,7 +27,7 @@ body {
 
 .kanban-column {
 	width: 210px;
-	padding-right: 15px;
+	margin-right: 15px;
 	border-left: 1px solid #dfe0e3;
 }
 
@@ -54,12 +54,30 @@ body {
 	border: 1px solid #dfe0e3;
 	border-left: 4px solid #acf2fa;
 	border-radius: 3px;
-	margin-bottom: 5px;
 	cursor: pointer;
+	margin-bottom: 5px;
 }
 
+/* .kanban-item::after {
+	content: "";
+	height: 5px;
+	position: relative;
+	top: 18px;
+	right: 14px;
+	width: 210px;
+	display: block;
+}
+
+.kanban-item::before {
+	content: "";
+	height: 5px;
+	display: block;
+	background: red;	
+} */
+
 .add-border {
-	border: 2px dashed #5de9f9;
+	border: 1px dashed #08ddf5;
+	border-left: 2px solid #acf2fa;
 }
 
 .kanban-item:hover {
